@startuml

package "Blockchain System" {
  class Blockchain {
    - chain: array
    - networkNodes: array
    - node: Node
    + Blockchain()
    + getBlockchain(): array
    + getAllTransactions(): array
    + createGenesisTransaction(): void
    + getLastBlock(): object
  }

  class Node {
    - blockchain: Blockchain
    - currentNodeId: string
    - pendingTransactions: array
    - wallets: array
    + Node(blockchain: Blockchain)
    + addWallet(wallet: Wallet): void
    + getWallets(): void
    + receiveTransaction(transaction: object): void
    + mineGenesisTransaction(): object
    + minePendingTransactions(): object
    + createNewBlock(nonce: int, previousBlockHash: string, hash: string): object
    + proofOfWork(previousBlockHash: string, currentBlockData: object): int
    + hashBlock(previousBlockHash: string, currentBlockData: object, nonce: int): string
  }

  class Wallet {
    - node: Node
    - publicKey: string
    - balance: int
    + Wallet(node: Node)
    + createAndBroadcastTransaction(amount: int, recipientWallet: Wallet): void
    + getBalance(): int
    + updateBalance(sender: string, recipient: string, amount: int): void
  }

  Blockchain --> Node: has
  Node --> Wallet: manages
  Wallet --> Node: references
}

@enduml
